--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-device-info": "0.11.0",
     "react-native-gesture-handler": "1.0.9",
     "react-native-i18n": "2.0.14",
+    "react-native-maps": "^0.24.2",
     "react-native-vector-icons": "6.1.0",
     "react-navigation": "3.0.0",
     "react-navigation-redux-helpers": "^2.0.6",
