--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-maps')
     compile project(':react-native-device-info')
     compile project(':react-native-i18n')
     compile project(':react-native-vector-icons')
