--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,11 +137,11 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-maps')
-    compile project(':react-native-device-info')
-    compile project(':react-native-i18n')
-    compile project(':react-native-vector-icons')
-    compile project(':react-native-gesture-handler')
+    implementation project(':react-native-maps')
+    implementation project(':react-native-device-info')
+    implementation project(':react-native-i18n')
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
