--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@
 # Now your app will have access to the variables added below. 
 # For more instructions see section "Secrets" in README.md
 
-API_URL=https://myapi.com
+API_URL=http://localhost:3000
 GOOGLE_MAPS_API_KEY=abcdefgh
